# electromagpy

./: .gitignore  LICENSE  README.md  bodies.py  pyproject.toml  setup.py
electromagpy/: fields.py  particles.py
electromagpy/fields/: __init__.py  _electrostatic.py  _fields.py  electrostatic.cpp  electrostatic.html  electrostatic.py  electrostatic.pyx  field.cpp  field.html  field.pxd  field.py  field.pyx  magnetostatic.cpp  magnetostatic.html  magnetostatic.py
electromagpy/fields_old/: electrostatic.cpp  electrostatic.html  field.pxd  field.py  magnetostatic.cpp
electromagpy/particles/: __init__.py  _particles.py  particles.cpp  particles.html  particles.pxd  particles.py
electromagpy/particles_old/: __init__.py  particles.cpp  particles.html
electromagpy/src/fields/: build_fields.py  electrostatic.c  electrostatic.py  field.c  field.pxd  field.py
electromagpy/src/particles/: build_particles.py  particles.c  particles.py
electromagpy/test/: test.py
