[build-system]
requires = ["setuptools", "cython==3.0.11"]
build-backend = "setuptools.build_meta"

[project]
name = "electromagpy"
version = "0.1"

[tool.setuptools]
ext-modules = [
    {name="electromagpy._fields.field", sources=["electromagpy/src/fields/field.py"]},
    {name="electromagpy._fields.electrostatic", sources=["electromagpy/src/fields/electrostatic.py"]},
    {name="electromagpy._particles.particles", sources=["electromagpy/src/particles/particles.py"]}
]
