[build-system]
requires = ["setuptools", "wheel", "Cython"]

[project]
name = "electromagpy"
version = "0.1"

#[tool.setuptools]
#ext-modules = [
#    {name="electromagpy.field", sources=["electromagpy/fields/field.py"]},
#    {name="electromagpy.electrostatic", sources=["electromagpy/fields/electrostatic.py"]},
#    {name="electromagpy.particles", sources=["electromagpy/particles/particles.py"]}
#]
